# cortex

./: .gitignore  AGENTS.md  AUDIT-SYSTEMS-UI-GAP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LLM-CHAT-SYSTEM-AUDIT-ADVERSARIAL-REVIEW.md  LLM-CHAT-SYSTEM-AUDIT.md  README.md  SECURITY.md  SYSTEM_REVIEW.md  USER.md  deno.json  install.ps1  kilo.jsonc  opencode.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
deploy/: com.cortexprism.plist  com.cortexprism.server.plist  cortex-daemon.service  cortex-node@.service  cortex-server.service  install-service.bat
desktop/: build-dashboard.ts  build-desktop.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs  tray.rs
docker/: computer-use.Dockerfile
docs/: AGENT_OS_ALIGNMENT.md  ARCHITECTURE.md  COMPATIBILITY.md  SECURITY_SUPERVISOR.md  SKILLS.md  TOOLS_CONFIGURATION.md  TOOL_ENHANCEMENTS.md  channels-quick-reference.md  observability.md  request-flow.md  ui-gallery.md
locales/: ar.json  de.json  en.json  en.json.bak  es.json  fr.json  hi.json  ja.json  ko.json  pt.json  ru.json  zh.json
packaging/: CODE_SIGNING.md
scripts/: check-boundaries.ts
src/: main.ts  pkm-connectors.ts
tests/: browser_tool_test.ts  db_query_tool_test.ts  docs_search_tool_test.ts  errors_test.ts  eval_framework_test.ts  file_diff_enhanced_test.ts  file_edit_ops_test.ts  git_enhanced_test.ts  image_analyze_test.ts  logger_test.ts  mcp_test.ts  memory_search_tool_test.ts  metacog_test.ts  metrics_test.ts  orchestration_pure_functions_test.ts  phase2_endpoints_all_test.ts  (+17 more)
(+632 files in other folders)
