[package]
name = "cortex-desktop"
version = "0.49.1"
edition = "2021"
description = "CortexPrism Desktop — native desktop wrapper with system tray, server management, and quick access"
authors = ["CortexPrism Contributors"]
license = "Apache-2.0"
repository = "https://github.com/CortexPrism/cortex"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
sysinfo = "0.32"
arboard = "3"
open = "5"
hostname = "0.4"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

[build-dependencies]
tauri-build = { version = "2" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
